--- a/网页制作的常见格式.md
+++ b/网页制作的常见格式.md
@@ -1,13 +1,31 @@
 # Some-essays
 记录自己的成长
-gif png-8 png-24 png-32 jpeg svg
-
-1.gif是一种正在逐渐被抛弃的图片格式。PNG格式的出现就是为了替代它。PNG 8除了不支持动画外，PNG8有GIF所有的特点，但是比GIF更加具有优势的是它支持alpha透明和更优的压缩（GIF仅支持索引透明）。
-2.PNG可以细分为三种格式:PNG8，PNG24，PNG32。
-    PNG8支持索引透明和alpha透明
-    PNG24不支持透明，但是加上透明就相当于png32
-
-不过现在出现了很多新的格式，比如说webp格式：
-下面我Google了一下：
-  WebP格式，谷歌（google）开发的一种旨在加快图片加载速度的图片格式。图片压缩体积大约只有JPEG的2/3，并能节省大量的服务器带宽资源和数据空间。Facebook Ebay等知名网站已经开始测试并使用WebP格式。
-在质量相同的情况下，WebP格式图像的体积要比JPEG格式图像小40%
+<section>
+    <h1>网页制作常用的格式是</h1>
+    <span>
+        gif png-8 png-24 png-32 jpeg svg
+    </span>
+    <ul>
+        <li>
+            <p>1.gif是一种正在逐渐被抛弃的图片格式。</p>
+            PNG格式的出现就是为了替代它。PNG 8除了不支持动画外，PNG8有GIF所有的特点，但是比GIF更加具有优势的是它支持alpha透明和更优的压缩（GIF仅支持索引透明）。
+        </li>
+        <li>
+        <p>2.PNG可以细分为三种格式:PNG8，PNG24，PNG32。</p>
+        PNG8支持索引透明和alpha透明<br />
+        PNG24不支持透明，但是加上透明就相当于png32<br />
+        </li>
+    </ul>>
+    <ul>
+        <li>  
+            <p>不过现在出现了很多新的格式，比如说webp格式：</p>
+            <b>下面我Google了一下：</b>
+        </li>
+        <li>
+            <span>
+              WebP格式，谷歌（google）开发的一种旨在加快图片加载速度的图片格式。图片压缩体积大约只有JPEG的2/3，并能节省大量的服务器带宽资源和数据空间。Facebook Ebay等知名网站已经开始测试并使用WebP格式。
+        在质量相同的情况下，WebP格式图像的体积要比JPEG格式图像小40%
+            </span>
+        </li>
+    </ul>
+</section>
