--- a/post/other/网页制作的常见格式.md
+++ b/post/other/网页制作的常见格式.md
@@ -1,5 +1,8 @@
 # Some-essays
-记录自己的成长
+
+记录
+
+```html
 <section>
     <h1>网页制作常用的格式是</h1>
     <span>
@@ -29,3 +32,4 @@
         </li>
     </ul>
 </section>
+```
